--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
     	<![endif]-->
     </head>
     <body>
-	
-
+	<div class="container">
+     <div class="row">
+         <div class="col-md-12">
+             <h1 class="center-block">
+                 This is a boilerplate
+             </h1>
+         </div> 
+     </div>
+    </div>
+    
     <script src="public/vendor/jquery/dist/jquery.min.js"></script>
     <script src="public/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js" async defer></script>
